Small updates to payground notebook

--- a/play.ipynb
+++ b/play.ipynb
@@ -51,7 +51,10 @@
    "source": [
     "plt.plot(sd_hf[\"transformer.wpe.weight\"][:, 150])\n",
     "plt.plot(sd_hf[\"transformer.wpe.weight\"][:, 200])\n",
-    "plt.plot(sd_hf[\"transformer.wpe.weight\"][:, 250])"
+    "plt.plot(sd_hf[\"transformer.wpe.weight\"][:, 250])\n",
+    "plt.xlabel(\"Token index\")\n",
+    "plt.ylabel(\"Embedding value\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -72,7 +75,7 @@
     "from transformers import pipeline, set_seed\n",
     "generator = pipeline('text-generation', model='gpt2')\n",
     "set_seed(42)\n",
-    "generator(\"Hello, I'm a language model,\", max_length=30, num_return_sequences=5)\n"
+    "generator(\"Hello, I'm a language model,\", max_length=20, num_return_sequences=5)\n"
    ]
   },
   {
